--- a/src/main/resources/templates/registrarEstudiantesAdministrador.html
+++ b/src/main/resources/templates/registrarEstudiantesAdministrador.html
@@ -6,6 +6,7 @@
     <title th:text="${titulo}">Formulario Estudiante</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet" />
     <link rel="stylesheet" href="/css/layout.css">
     <style>
         :root {
