--- a/src/main/resources/templates/institucion.html
+++ b/src/main/resources/templates/institucion.html
@@ -518,6 +518,10 @@
                 setTimeout(() => firstInput.focus(), 100);
             }
         });
+		
+		
+		
     </script>
+	<script src="/js/sidebar-auto-init.js"></script>
 </body>
 </html>
